// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputLegend > should render input legend component > expected html 1`] = `
<div>
  <legend
    class="block"
    data-testid="input-legend"
    id="id"
  >
    <span
      class="font-semibold"
    >
      input legend
    </span>
  </legend>
</div>
`;

exports[`InputLegend > should render input legend component with required > expected html 1`] = `
<div>
  <legend
    class="block"
    data-testid="input-legend"
    id="id"
  >
    <span
      class="font-semibold"
    >
      input legend
    </span>
     (
    input.required
    )
  </legend>
</div>
`;
